--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"
-    xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
 <body>
 <div class="container">
     <h1>회원가입</h1>
-    <form role="#" th:action="@{/createMember}" th:object="${userForm}" method="post">
+    
+    <form method="post" th:action="@{/createMember}" th:object="${userForm}" >
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div class="form-group">
             <label th:for="email">이메일</label>
@@ -19,7 +20,7 @@
         </div>
         <div class="form-group">
             <label th:for="password">비밀번호</label>
-            <input type="password" class="form-control" th:field="*{password}" id="user_password" placeholder="비밀번호">
+            <input type="password" class="form-control" th:field="*{password}" id="user_password" placeholder="비밀번호" autocomplete="on">
         </div>
         <div class="form-group">
             <label th:for="phone">핸드폰</label>
@@ -32,7 +33,7 @@
   			<input type='radio' th:field="*{gender}" class="user_gender" value='male' />남성
   			</div>
         </div>
-        <button type="button" class="btn btn-primary" id="submit_user" style="float:right">Submit</button>
+        <button type="submit" class="btn btn-primary" id="submit_user" style="float:right">Submit</button>
     </form>
     <br/>
 </div>
